<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res/com.radhi.Pokedex">
    <string name="app_name">Pokédex</string>

    <!--Di row_layout.xml-->
    <string name="iconDesc">Pokemon icon</string>

    <!--Di advanced filter pokemon name-->
    <string name="search_pokemon_name">Pokémon\'s name</string>
    <string name="clear_text">×</string>
    <string name="label_generation">Generation</string>
    <string name="label_color">Color</string>
    <string name="label_type1">Type 1</string>
    <string name="label_type2">Type 2</string>
    <string name="label_baby">Is baby</string>
    <string name="label_gender_diff">Has gender differences</string>
    <string name="label_mega_evolution">Has mega evolution</string>
    <string name="label_tap_to_clear">tap to clear filter</string>
    <array name="array_generation">
        <item>Doesn\'t matter</item>
        <item>Generation I</item>
        <item>Generation II</item>
        <item>Generation III</item>
        <item>Generation IV</item>
        <item>Generation V</item>
        <item>Generation VI</item>
    </array>

    <array name="array_color">
        <item>Doesn\'t matter</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>White</item>
        <item>Yellow</item>
    </array>

    <array name="array_type">
        <item>Doesn\'t matter</item>
        <item>Normal</item>
        <item>Fighting</item>
        <item>Flying</item>
        <item>Poison</item>
        <item>Ground</item>
        <item>Rock</item>
        <item>Bug</item>
        <item>Ghost</item>
        <item>Steel</item>
        <item>Fire</item>
        <item>Water</item>
        <item>Grass</item>
        <item>Electric</item>
        <item>Psychic</item>
        <item>Ice</item>
        <item>Dragon</item>
        <item>Dark</item>
        <item>Fairy</item>
    </array>

    <!--Di page_appearance.xml-->
    <string name="imgSugimoriDesc">Sugimori art</string>
    <string name="imgSpriteDesc">Normal sprite image</string>
    <string name="txtSprite">Normal</string>
    <string name="txtSprite2">Female</string>
    <string name="txtTap">tap to see shiny sprite</string>

    <!--Di page_data.xml-->
    <string name="nationalID">National ID</string>
    <string name="japanese">Japanese</string>
    <string name="species">Species</string>
    <string name="type">Type</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="habitat">Habitat</string>
    <string name="shape">Body shape</string>
    <string name="gender">Gender</string>
    <string name="egg">Egg groups</string>
    <string name="hatch">Hatch counter</string>
    <string name="growth">Growth rate</string>
    <string name="capture">Capture rate</string>

    <!--Di page_stat.xml-->
    <string name="baseEXP">Base EXP</string>
    <string name="baseHappiness">Base happiness</string>
    <string name="baseEffort">Base effort</string>
    <string name="baseStat">Base Stats</string>
    <string name="strong">Strong</string>
    <string name="immune">Immune</string>
    <string name="weak">Weak</string>
    <string name="txtDefenses">Type Defenses</string>

    <!--Di page_move.xml-->
    <string name="txtTapMove">tap to filter</string>

    <!--Di activity_move_detail.xml-->
    <string name="move_type">Type</string>
    <string name="move_category">Category</string>
    <string name="move_power">Power</string>
    <string name="move_accuracy">Accuracy</string>
    <string name="move_pp">PP</string>
    <string name="move_ailment">Ailment</string>
    <string name="move_target">Target</string>

    <!--Di fragment_move_detail.xml-->
    <string name="list_machine">List of TM/HM</string>
    <string name="txtOffenses">Type Offenses</string>

    <!--Di menu utama-->
    <string name="search">Search</string>
    <string name="download_image">Get Image</string>
    <string name="download_art">Get Sugimori Art</string>
    <string name="download_sprite">Get Pokémon Sprites</string>

    <!--Di changelog-->
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more…</string>
    <string name="changelog_version_format">Version <xliff:g id="version_name">%s</xliff:g></string>

    <color name="default_background">#eee</color>
</resources>


