<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtMoveName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/bg"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/txtMoveDescription"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:lineSpacingExtra="4dp"
            android:gravity="center"
            android:background="@drawable/bg"
            android:layout_marginBottom="5dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/lblMoveType"
                style="@style/columnStyle"
                android:text="@string/move_type"/>

            <TextView
                android:id="@+id/txtMoveType"
                android:layout_width="70dp"
                android:layout_height="20dp"
                style="@style/basicType"
                android:layout_marginRight="8dp"
                android:layout_toRightOf="@id/lblMoveType"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/lblMoveCategory"
                style="@style/columnStyle"
                android:text="@string/move_category"
                android:layout_below="@id/txtMoveType"/>

            <TextView
                android:id="@+id/txtMoveCategory"
                android:layout_width="70dp"
                android:layout_height="20dp"
                style="@style/basicType"
                android:layout_marginRight="8dp"
                android:layout_toRightOf="@id/lblMoveType"
                android:layout_below="@id/txtMoveType"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/lblMovePower"
                style="@style/columnStyle"
                android:text="@string/move_power"
                android:layout_below="@id/txtMoveCategory"/>

            <TextView
                android:id="@+id/txtMovePower"
                style="@style/defaultStyle"
                android:layout_toRightOf="@id/lblMovePower"
                android:layout_below="@id/txtMoveCategory"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/lblMoveAccuracy"
                style="@style/columnStyle"
                android:text="@string/move_accuracy"
                android:layout_below="@id/txtMovePower"/>

            <TextView
                android:id="@+id/txtMoveAccuracy"
                style="@style/defaultStyle"
                android:layout_toRightOf="@id/lblMoveAccuracy"
                android:layout_below="@id/txtMovePower"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/lblMovePP"
                style="@style/columnStyle"
                android:text="@string/move_pp"
                android:layout_below="@id/txtMoveAccuracy"/>

            <TextView
                android:id="@+id/txtMovePP"
                style="@style/defaultStyle"
                android:layout_toRightOf="@id/lblMovePP"
                android:layout_below="@id/txtMoveAccuracy"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/lblMoveAilment"
                style="@style/columnStyle"
                android:text="@string/move_ailment"
                android:layout_below="@id/txtMovePP"/>

            <TextView
                android:id="@+id/txtMoveAilment"
                style="@style/defaultStyle"
                android:layout_toRightOf="@id/lblMoveAilment"
                android:layout_below="@id/txtMovePP"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/lblMoveTarget"
                style="@style/columnStyle"
                android:text="@string/move_target"
                android:layout_below="@id/txtMoveAilment"/>

            <TextView
                android:id="@+id/txtMoveTarget"
                style="@style/defaultStyle"
                android:layout_toRightOf="@id/lblMoveTarget"
                android:layout_below="@id/txtMoveAilment"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/boxTypeEfficacy"
            style="@style/defaultStyle"
            android:background="@drawable/bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblTypeEfficacy"
                style="@style/defaultStyle"
                android:text="@string/txtOffenses"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                style="@style/defaultStyle"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblTypeEffectife"
                    style="@style/fillingSpace"
                    android:gravity="center"
                    android:text="@string/strong"/>

                <TextView
                    android:id="@+id/lblTypeImmune"
                    style="@style/fillingSpace"
                    android:gravity="center"
                    android:text="@string/immune"/>

                <TextView
                    android:id="@+id/lblTypeNotEffective"
                    style="@style/fillingSpace"
                    android:gravity="center"
                    android:text="@string/weak"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/boxOffence"
                style="@style/defaultStyle"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/boxOffenceStrong"
                    style="@style/fillingSpace"
                    android:orientation="vertical"
                    android:paddingRight="2dp"/>

                <LinearLayout
                    android:id="@+id/boxOffenceImmune"
                    style="@style/fillingSpace"
                    android:orientation="vertical"
                    android:paddingRight="2dp"
                    android:paddingLeft="2dp"/>

                <LinearLayout
                    android:id="@+id/boxOffenceWeak"
                    style="@style/fillingSpace"
                    android:orientation="vertical"
                    android:paddingLeft="2dp"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>