<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp">

        <TextView
            android:id="@+id/txtMoveName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/txtMoveDescription"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@id/txtMoveName"
            android:lineSpacingExtra="4dp"
            android:gravity="center"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:id="@+id/lblMoveType"
            style="@style/columnStyle"
            android:text="@string/move_type"
            android:layout_below="@id/txtMoveDescription"/>

        <TextView
            android:id="@+id/txtMoveType"
            android:layout_width="70dp"
            android:layout_height="20dp"
            style="@style/basicType"
            android:layout_marginRight="8dp"
            android:layout_toRightOf="@id/lblMoveType"
            android:layout_below="@id/txtMoveDescription"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/lblMoveCategory"
            style="@style/columnStyle"
            android:text="@string/move_category"
            android:layout_below="@id/txtMoveType"/>

        <TextView
            android:id="@+id/txtMoveCategory"
            style="@style/defaultStyle"
            android:layout_toRightOf="@id/lblMoveType"
            android:layout_below="@id/txtMoveType"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/lblMovePower"
            style="@style/columnStyle"
            android:text="@string/move_power"
            android:layout_below="@id/txtMoveCategory"/>

        <TextView
            android:id="@+id/txtMovePower"
            style="@style/defaultStyle"
            android:layout_toRightOf="@id/lblMovePower"
            android:layout_below="@id/txtMoveCategory"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/lblMoveAccuracy"
            style="@style/columnStyle"
            android:text="@string/move_accuracy"
            android:layout_below="@id/txtMovePower"/>

        <TextView
            android:id="@+id/txtMoveAccuracy"
            style="@style/defaultStyle"
            android:layout_toRightOf="@id/lblMoveAccuracy"
            android:layout_below="@id/txtMovePower"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/lblMovePP"
            style="@style/columnStyle"
            android:text="@string/move_pp"
            android:layout_below="@id/txtMoveAccuracy"/>

        <TextView
            android:id="@+id/txtMovePP"
            style="@style/defaultStyle"
            android:layout_toRightOf="@id/lblMovePP"
            android:layout_below="@id/txtMoveAccuracy"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/lblMoveAilment"
            style="@style/columnStyle"
            android:text="@string/move_ailment"
            android:layout_below="@id/txtMovePP"/>

        <TextView
            android:id="@+id/txtMoveAilment"
            style="@style/defaultStyle"
            android:layout_toRightOf="@id/lblMoveAilment"
            android:layout_below="@id/txtMovePP"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/lblMoveTarget"
            style="@style/columnStyle"
            android:text="@string/move_target"
            android:layout_below="@id/txtMoveAilment"/>

        <TextView
            android:id="@+id/txtMoveTarget"
            style="@style/defaultStyle"
            android:layout_toRightOf="@id/lblMoveTarget"
            android:layout_below="@id/txtMoveAilment"/>

    </RelativeLayout>
</ScrollView>