<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee">

    <LinearLayout
        android:orientation="vertical"
        style="@style/defaultStyle"
        android:padding="10dp">

        <RelativeLayout
            style="@style/defaultStyle"
            android:background="@drawable/bg"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/lblBaseEXP"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                style="@style/columnStyle"
                android:text="@string/baseEXP"/>

            <TextView
                android:id="@+id/txtBaseEXP"
                style="@style/defaultStyle"
                android:layout_toRightOf="@id/lblBaseEXP"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/lblBaseEffort"
                style="@style/columnStyle"
                android:text="@string/baseEffort"
                android:layout_below="@id/txtBaseEXP"/>

            <TextView
                android:id="@+id/txtBaseEffort"
                style="@style/defaultStyle"
                android:layout_toRightOf="@id/lblBaseEffort"
                android:layout_below="@id/txtBaseEXP"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/lblBaseHappiness"
                style="@style/columnStyle"
                android:text="@string/baseHappiness"
                android:layout_below="@id/txtBaseEffort"/>

            <TextView
                android:id="@+id/txtBaseHappiness"
                style="@style/defaultStyle"
                android:layout_toRightOf="@id/lblBaseHappiness"
                android:layout_below="@id/txtBaseEffort"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/boxStat"
            style="@style/defaultStyle"
            android:background="@drawable/bg"
            android:orientation="vertical"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/defaultStyle"
                android:text="@string/baseStat"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/boxTypeEfficacy"
            style="@style/defaultStyle"
            android:background="@drawable/bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblTypeEfficacy"
                style="@style/defaultStyle"
                android:text="@string/txtEfficacy"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                style="@style/defaultStyle"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblTypeEffectife"
                    style="@style/fillingSpace"
                    android:gravity="center"
                    android:text="@string/strong"/>

                <TextView
                    android:id="@+id/lblTypeImmune"
                    style="@style/fillingSpace"
                    android:gravity="center"
                    android:text="@string/immune"/>

                <TextView
                    android:id="@+id/lblTypeNotEffective"
                    style="@style/fillingSpace"
                    android:gravity="center"
                    android:text="@string/weak"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/boxOffence"
                style="@style/defaultStyle"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/boxOffenceStrong"
                    style="@style/fillingSpace"
                    android:orientation="vertical"
                    android:paddingRight="2dp"/>

                <LinearLayout
                    android:id="@+id/boxOffenceImmune"
                    style="@style/fillingSpace"
                    android:orientation="vertical"
                    android:paddingRight="2dp"
                    android:paddingLeft="2dp"/>

                <LinearLayout
                    android:id="@+id/boxOffenceWeak"
                    style="@style/fillingSpace"
                    android:orientation="vertical"
                    android:paddingLeft="2dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/boxDefence"
                style="@style/defaultStyle"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/boxDefenceStrong"
                    style="@style/fillingSpace"
                    android:orientation="vertical"
                    android:paddingRight="2dp"/>

                <LinearLayout
                    android:id="@+id/boxDefenceImmune"
                    style="@style/fillingSpace"
                    android:orientation="vertical"
                    android:paddingRight="2dp"
                    android:paddingLeft="2dp"/>

                <LinearLayout
                    android:id="@+id/boxDefenceWeak"
                    style="@style/fillingSpace"
                    android:orientation="vertical"
                    android:paddingLeft="2dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/lblTapEfficacy"
                style="@style/defaultStyle"
                android:text="@string/txtTapEfficacy"
                android:textSize="10sp"
                android:gravity="center"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>